# claude-scholar-assimilation

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: citation-checker.md  code-architect.md  data-analyst.md  figure-designer.md  language-editor.md  literature-scout.md  mock-reviewer.md  paper-writer.md  submission-manager.md
.claude/commands/: analyze-results.md  chart-recommend.md  code-review.md  commit.md  compress.md  de-ai.md  expand.md  figure-caption.md  logic-check.md  new-project.md  plan.md  polish.md  poster.md  presentation.md  promote.md  rebuttal.md  research-init.md  review-paper.md  spawn-team.md  table-caption.md  tdd.md  team-status.md  translate.md  update-memory.md  zotero-notes.md  zotero-review.md
.claude/rules/: experiment-workflow.md  team-coordination.md
.github/workflows/: pages.yml
_data/: papers.json
knowledge/conference-checklists/: acl.md  cvpr.md  iclr.md  icml.md  neurips.md
knowledge/prompts/: 01-中转英-chinese-to-english.md  (+14 more)
projects/_template/: README.md  environment.yml  pyproject.toml
projects/_template/paper/: references.bib
projects/_template/run/conf/: config.yaml
projects/_template/run/pipeline/: train.py
projects/_template/src/data_module/: __init__.py
projects/_template/src/model_module/: __init__.py
projects/_template/src/trainer_module/: __init__.py
projects/_template/src/utils/: __init__.py
scripts/: cleanup_slugified.py  collect_papers.py  fetch_arxiv_content.py  generate_abstracts.py  generate_summaries.py  generate_summary.py  migrate_papers.py  regenerate_abstracts.py  update_index.py
(+266 files in other folders)
